kubernetes/apps/kubeflow/distribution/edge/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow
spec:
  hostnames:
    - kubeflow.goyangi.io
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: istio-ingressgateway
          namespace: istio-system
          port: 80
